--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,12 +4,16 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
+      - name: List files
+        run: |
+          pwd
+          ls -a 
       - name: Checkout
         uses: actions/checkout@v1
       - name: List files
         run: |
           pwd
-          ls
+          ls -a 
       - name: Simple JS Actions
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
